--- a/cottagevillagemayak/mayak/static/scss/fonts.scss
+++ b/cottagevillagemayak/mayak/static/scss/fonts.scss
@@ -1,48 +1,29 @@
-@font-face {
-    font-family: "Gotham Pro";
-    src: url("fonts/GothamPro.ttf");
-}
+@use "sass:string";
 
-@font-face {
-    font-family: "Gotham Pro Light";
-    src: url("fonts/GothamPro-Light.ttf");
-}
+$font-families: (
+    "Gotham Pro": "fonts/GothamPro.ttf",
+    "Gotham Pro Light": "fonts/GothamPro-Light.ttf",
+    "Gotham Pro Medium": "fonts/GothamPro-Medium.ttf",
+    "Gotham Pro Bold": "fonts/GothamPro-Bold.ttf",
+    "Gotham Pro Black": "fonts/GothamPro-Black.ttf",
+);
 
-@font-face {
-    font-family: "Gotham Pro Medium";
-    src: url("fonts/GothamPro-Medium.ttf");
-}
-
-@font-face {
-    font-family: "Gotham Pro Bold";
-    src: url("fonts/GothamPro-Bold.ttf");
-}
-
-@font-face {
-    font-family: "Gotham Pro Black";
-    src: url("fonts/GothamPro-Black.ttf");
+@each $font-family, $url in $font-families {
+    @font-face {
+        font-family: $font-family;
+        src: url($url);
+    }
+    @if ($font-family != "Gotham Pro") {
+        .gotham-#{string.to-lower-case(string.slice($font-family, 12))} {
+            font-family: $font-family;
+        }
+    }
 }
 
 /* Accept fonts */
 * {
     // padding: 0;
     font-family: "Gotham Pro";
-}
-
-.gotham-light {
-    font-family: "Gotham Pro Light";
-}
-
-.gotham-medium {
-    font-family: "Gotham Pro Medium";
-}
-
-.gotham-bold {
-    font-family: "Gotham Pro Bold";
-}
-
-.gotham-black {
-    font-family: "Gotham Pro Black";
 }
 
 .fs-18 {
