Add comments to modules; Add reset styles

--- a/cottagevillagemayak/mayak/static/scss/fonts.scss
+++ b/cottagevillagemayak/mayak/static/scss/fonts.scss
@@ -1,3 +1,15 @@
+/* Fonts module
+==================
+
+All font styles.
+
+Loaded fonts:
+- Gotham Pro
+- Gotham Pro Light
+- Gotham Pro Medium
+- Gotham Pro Bold
+- Gotham Pro Black
+*/
 @use "sass:string";
 
 $font-families: (
