--- a/cottagevillagemayak/mayak/static/scss/img.scss
+++ b/cottagevillagemayak/mayak/static/scss/img.scss
@@ -1,3 +1,8 @@
+/* Img module
+================
+
+All image styles.
+*/
 img {
     div .darkened-image > & {
         filter: brightness(35%);
@@ -8,7 +13,13 @@ img {
     }
 }
 
+// .main-content {
+
+// }
+
 .bottom-left {
+    display: inline-block;
+    color: #fff;
     position: absolute;
     bottom: 15vh;
     left: 10vw;
