--- a/cottagevillagemayak/mayak/static/style.css
+++ b/cottagevillagemayak/mayak/static/style.css
@@ -57,6 +57,219 @@ select {
     }
 }
 
+/* Spacing module
+====================
+
+Margins and paddings.
+*/
+.p-0 {
+    padding: 0;
+}
+
+.p-2 {
+    padding: 2;
+}
+
+.p-4 {
+    padding: 4;
+}
+
+.p-6 {
+    padding: 6;
+}
+
+.p-8 {
+    padding: 8;
+}
+
+.p-10 {
+    padding: 10;
+}
+
+.p-12 {
+    padding: 12;
+}
+
+.p-14 {
+    padding: 14;
+}
+
+.p-16 {
+    padding: 16;
+}
+
+.p-18 {
+    padding: 18;
+}
+
+.p-20 {
+    padding: 20;
+}
+
+.p-22 {
+    padding: 22;
+}
+
+.p-24 {
+    padding: 24;
+}
+
+.p-26 {
+    padding: 26;
+}
+
+.p-28 {
+    padding: 28;
+}
+
+.p-30 {
+    padding: 30;
+}
+
+.p-32 {
+    padding: 32;
+}
+
+.p-34 {
+    padding: 34;
+}
+
+.p-36 {
+    padding: 36;
+}
+
+.p-38 {
+    padding: 38;
+}
+
+.p-40 {
+    padding: 40;
+}
+
+.p-42 {
+    padding: 42;
+}
+
+.p-44 {
+    padding: 44;
+}
+
+.p-46 {
+    padding: 46;
+}
+
+.p-48 {
+    padding: 48;
+}
+
+.p-50 {
+    padding: 50;
+}
+
+.m-0 {
+    margin: 0;
+}
+
+.m-2 {
+    margin: 2;
+}
+
+.m-4 {
+    margin: 4;
+}
+
+.m-6 {
+    margin: 6;
+}
+
+.m-8 {
+    margin: 8;
+}
+
+.m-10 {
+    margin: 10;
+}
+
+.m-12 {
+    margin: 12;
+}
+
+.m-14 {
+    margin: 14;
+}
+
+.m-16 {
+    margin: 16;
+}
+
+.m-18 {
+    margin: 18;
+}
+
+.m-20 {
+    margin: 20;
+}
+
+.m-22 {
+    margin: 22;
+}
+
+.m-24 {
+    margin: 24;
+}
+
+.m-26 {
+    margin: 26;
+}
+
+.m-28 {
+    margin: 28;
+}
+
+.m-30 {
+    margin: 30;
+}
+
+.m-32 {
+    margin: 32;
+}
+
+.m-34 {
+    margin: 34;
+}
+
+.m-36 {
+    margin: 36;
+}
+
+.m-38 {
+    margin: 38;
+}
+
+.m-40 {
+    margin: 40;
+}
+
+.m-42 {
+    margin: 42;
+}
+
+.m-44 {
+    margin: 44;
+}
+
+.m-46 {
+    margin: 46;
+}
+
+.m-48 {
+    margin: 48;
+}
+
+.m-50 {
+    margin: 50;
+}
+
 /* Fonts module
 ==================
 
@@ -80,7 +293,11 @@ Loaded fonts:
 }
 
 .gotham-light {
-    font-family: "Gotham Pro Light";
+    font-family: "Gotham Pro Light" !important;
+}
+
+.gotham-light p {
+    font-family: inherit;
 }
 
 @font-face {
@@ -89,7 +306,11 @@ Loaded fonts:
 }
 
 .gotham-medium {
-    font-family: "Gotham Pro Medium";
+    font-family: "Gotham Pro Medium" !important;
+}
+
+.gotham-medium p {
+    font-family: inherit;
 }
 
 @font-face {
@@ -98,7 +319,11 @@ Loaded fonts:
 }
 
 .gotham-bold {
-    font-family: "Gotham Pro Bold";
+    font-family: "Gotham Pro Bold" !important;
+}
+
+.gotham-bold p {
+    font-family: inherit;
 }
 
 @font-face {
@@ -107,16 +332,111 @@ Loaded fonts:
 }
 
 .gotham-black {
-    font-family: "Gotham Pro Black";
+    font-family: "Gotham Pro Black" !important;
 }
 
-/* Accept fonts */
+.gotham-black p {
+    font-family: inherit;
+}
+
 * {
     font-family: "Gotham Pro";
 }
 
+.fs-2 {
+    font-size: 2;
+}
+
+.fs-4 {
+    font-size: 4;
+}
+
+.fs-6 {
+    font-size: 6;
+}
+
+.fs-8 {
+    font-size: 8;
+}
+
+.fs-10 {
+    font-size: 10;
+}
+
+.fs-12 {
+    font-size: 12;
+}
+
+.fs-14 {
+    font-size: 14;
+}
+
+.fs-16 {
+    font-size: 16;
+}
+
 .fs-18 {
-    font-size: 18 !important;
+    font-size: 18;
+}
+
+.fs-20 {
+    font-size: 20;
+}
+
+.fs-22 {
+    font-size: 22;
+}
+
+.fs-24 {
+    font-size: 24;
+}
+
+.fs-26 {
+    font-size: 26;
+}
+
+.fs-28 {
+    font-size: 28;
+}
+
+.fs-30 {
+    font-size: 30;
+}
+
+.fs-32 {
+    font-size: 32;
+}
+
+.fs-34 {
+    font-size: 34;
+}
+
+.fs-36 {
+    font-size: 36;
+}
+
+.fs-38 {
+    font-size: 38;
+}
+
+.fs-40 {
+    font-size: 40;
+}
+
+.fs-42 {
+    font-size: 42;
+}
+
+.fs-44 {
+    font-size: 44;
+}
+
+.fs-46 {
+    font-size: 46;
+}
+
+.fs-48 {
+    font-size: 48;
 }
 
 /* Img module
@@ -124,22 +444,22 @@ Loaded fonts:
 
 All image styles.
 */
-div .darkened-image>img {
-    filter: brightness(35%);
+div #start {
+    position: relative;
 }
 
-div .full-width>img {
+div #start img {
+    filter: brightness(35%);
     width: 100vw;
 }
 
-.bottom-left {
-    display: inline-block;
-    color: #fff;
+div #start .start-text {
     position: absolute;
-    bottom: 15vh;
-    left: 10vw;
-}
-
-.p-0 {
-    padding: 0;
+    left: 15%;
+    top: 13%;
+    height: 24%;
+    text-transform: uppercase;
+    color: white;
+    text-align: left;
+    font: "Gotham Pro Bold";
 }
