--- a/cottagevillagemayak/templates/base.html
+++ b/cottagevillagemayak/templates/base.html
@@ -64,15 +64,15 @@
 
       <!-- Login -->
       <div class="col-1 d-flex justify-content-end d-inline">
-          <a class="logo-top" href="#">
-            <img
-              src="{% static 'img/account.png' %}"
-              height="50vh"
-              class=""
-              alt=""
-              loading="lazy"
-            />
-          </a>
+        <a class="logo-top" href="#">
+          <img
+            src="{% static 'img/account.png' %}"
+            height="50vh"
+            class=""
+            alt=""
+            loading="lazy"
+          />
+        </a>
       </div>
     </nav>
 
@@ -80,31 +80,71 @@
 
     {% block about %} {% endblock %}
 
-    <!--
-      <footer>
-        <div class="container">
-          <nav class="navbar container">
-            <a class="navbar-brand logo-top" href="#">
-              <img
-                src="{% static 'img/Logo.png' %}"
-                width="40"
-                height="40"
-                class="d-inline-block align-top"
-                alt=""
-                loading="lazy"
-              />
-              Brand Name
+    <footer class="bd-footer py-4 py-md-4 mt-5 bg-light">
+      <div class="container py-4 py-md-4 px-4 px-md-3">
+        <div class="row">
+          <div class="col-lg-3 mb-3">
+            <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/" aria-label="Bootstrap">
+              <img src="{% static 'img/logo.png' %}" height="50vh" alt="">
+              <span class="gotham-black fs-5 ms-1">Маяк</span>
             </a>
-            <div class="contact-top">
-              <a class="whatsapp-number" href="https://web.whatsapp.com/"></a>
-              <a class="telegram-number" href="https://t.me/"></a>
-              <a class="phone-number text-dark" href="tel:+74957777777">
-                <h6>+7(495)-777-77-77</h6></a
-              >
-            </div>
-          </nav>
+            <ul class="list-unstyled small text-muted">
+              <li class="mb-2">Designed and built with all the love in the world by the <a href="/docs/5.2/about/team/">Bootstrap team</a> with the help of <a href="https://github.com/twbs/bootstrap/graphs/contributors">our contributors</a>.</li>
+              <li class="mb-2">Code licensed <a href="https://github.com/twbs/bootstrap/blob/main/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.</li>
+              <li class="mb-2">Currently v5.2.0.</li>
+            </ul>
+          </div>
+          <div class="col-6 col-lg-2 offset-lg-1 mb-3">
+            <h5>Страницы</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="/">Главная</a></li>
+              <li class="mb-2"><a href="/about">О посёлке</a></li>
+              <li class="mb-2"><a href="/news">Новости</a></li>
+              <li class="mb-2"><a href="/services">Услуги</a></li>
+              <li class="mb-2"><a href="/genplan">Генплан</a></li>
+              <li class="mb-2"><a href="/сontacts">Контакты</a></li>
+              <!-- <li class="mb-2"><a href="https://cottonbureau.com/people/bootstrap">Swag Store</a></li> -->
+            </ul>
+          </div>
+          <div class="col-6 col-lg-2 mb-3">
+            <h5>Guides</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="/docs/5.2/getting-started/">Getting started</a></li>
+              <li class="mb-2"><a href="/docs/5.2/examples/starter-template/">Starter template</a></li>
+              <li class="mb-2"><a href="/docs/5.2/getting-started/webpack/">Webpack</a></li>
+              <li class="mb-2"><a href="/docs/5.2/getting-started/parcel/">Parcel</a></li>
+              <li class="mb-2"><a href="/docs/5.2/getting-started/vite/">Vite</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-lg-2 mb-3">
+            <h5>Projects</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="https://github.com/twbs/bootstrap">Bootstrap 5</a></li>
+              <li class="mb-2"><a href="https://github.com/twbs/bootstrap/tree/v4-dev">Bootstrap 4</a></li>
+              <li class="mb-2"><a href="https://github.com/twbs/icons">Icons</a></li>
+              <li class="mb-2"><a href="https://github.com/twbs/rfs">RFS</a></li>
+              <li class="mb-2"><a href="https://github.com/twbs/bootstrap-npm-starter">npm starter</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-lg-2 mb-3">
+            <h5>Community</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="https://github.com/twbs/bootstrap/issues">Issues</a></li>
+              <li class="mb-2"><a href="https://github.com/twbs/bootstrap/discussions">Discussions</a></li>
+              <li class="mb-2"><a href="https://github.com/sponsors/twbs">Corporate sponsors</a></li>
+              <li class="mb-2"><a href="https://opencollective.com/bootstrap">Open Collective</a></li>
+              <li class="mb-2"><a href="https://bootstrap-slack.herokuapp.com/">Slack</a></li>
+              <li class="mb-2"><a href="https://stackoverflow.com/questions/tagged/bootstrap-5">Stack Overflow</a></li>
+            </ul>
+          </div>
         </div>
-      </footer>
-      -->
+      </div>
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
